fixed responsiveness layout issues

--- a/static/style.css
+++ b/static/style.css
@@ -50,10 +50,10 @@ body {
 	justify-content: center;
 	background-color: var(--background-color-2);
 	flex-direction: column;
-	display: grid;
-    grid-template-columns: 1fr;
+	display: inline-flex;
+    /*grid-template-columns: 1fr;
     grid-template-rows: 1fr auto 1fr;
-    grid-template-areas: "nav1" "car1" "butt1";
+    grid-template-areas: "nav1" "car1" "butt1";*/
     min-height: 0;
     min-width: 0;
 }
@@ -141,25 +141,28 @@ body {
 /* codepen https://codepen.io/bertdida/pen/xyPKRX
 */
 .c-formContainer .c-form {
-  width: 37.5em;
+  max-width: 37.5em;
 }
 
 .c-formContainer,
 .c-form {
-  width: 20em;
+  width: 100%;
   height: 6.25em;
 }
 
 .c-formContainer {
   position: relative;
   font-weight: 700;
+  width:100%;
 }
 
 .c-fake-button {
-	padding: 0.625em;
+	/*padding: 0.625em;*/
+	padding: 1.5em;
 	box-sizing: border-box;
 	box-shadow: 0 0.125em 0.3125em rgba(0, 0, 0, 0.3);
-	width: 20em;
+	width: 100%;
+	max-width: 30em;
 	height: 6.25em;
 	border-radius: 6.25em;
 	transition: 0.2s;
@@ -224,7 +227,7 @@ body {
 .c-form__input,
 .c-form__buttonLabel {
   font-size: 1.75em;
-  transform: scale(0.7);
+  transform: scale(0.9);
   transition: 0s;
 }
 
@@ -233,6 +236,8 @@ body {
   height: 100%;
   width: 100%;
   padding: 0 0.714em;
+  flex: 3 3 auto;
+  min-width: 5em;
 }
 .c-form__input::placeholder {
   color: currentColor;
@@ -267,7 +272,7 @@ body {
   color: inherit;
   padding: 0;
   height: 100%;
-  width: 5em;
+  min-width: 3em;
   background-color: #ff7b73;
 }
 
